@startuml

class Galeria{
  -Cuadro<Action>:string;
}
class Cuadro{
    -iD_obra:string;
    -nombre:string;
    -artista:string;
    -iD_obra:string;
    -precio:string;
  
}
class osbert{
   +compra();
   +GeneraCuadro();
   +GeneraOferta(Subastas<Action>);
  
}
class Cliente{
    -bool compra;
    +compra();
}
class Subastas{
    -Subastas<Action>:Subasta;
    +getInformation():string;
    +PrecioDeCompra(año_subasta):int;
}
class Subasta{
    -año_subasta:int;
    -Precio:float; 
    +getArtista():string;
    +getAño():int;
    +getPrecio():float;
}
class Venta{
    -nombre:string; 
    -direccion:string;
    -precioCompra:int;
}

Galeria o-- Cuadro 
Cuadro <-- Subasta
Subastas o-- Subasta
Venta *-- Cuadro 
osbert *-- Subastas
osbert "1" - "1..*" Cliente
(osbert,Cliente)..Cuadro
@enduml